tests/ui/parser/issues/issue-17718-const-mut.stderr
error: const globals cannot be mutable
  --> $DIR/issue-17718-const-mut.rs:2:1
   |
LL | mut
   | ^^^ cannot be mutable
   |
help: you might want to declare a static instead
   |
LL - const
LL + static
   |

error: aborting due to 1 previous error

